<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/indexpagebackground"
    tools:context=".IndexPage">

    <Button
        android:id="@+id/concurrencyButton"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="260dp"
        android:text="@string/concurrency"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deadlockButton"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/deadlock"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concurrencyButton" />

    <Button
        android:id="@+id/algorithmsButton"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/algorithms"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlockButton" />
</androidx.constraintlayout.widget.ConstraintLayout>